updated index file

--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,11 @@
 
 	<meta name="salesforce-mode" content="modal">
 	<meta name="salesforce-mask-redirects" content="true">
-	<meta name="salesforce-allowed-domains" content="socket2.htmlsave.com">    
+	<meta name="salesforce-allowed-domains" content="loving-euclid-96db97.netlify.com">    
     <meta name="salesforce-save-access-token" content="true">
     <meta name="salesforce-forgot-password-enabled" content="true">
     <meta name="salesforce-self-register-enabled" content="true">
-    <meta name="salesforce-redirect-uri" content="https://socket2.htmlsave.com/login">
+    <meta name="salesforce-redirect-uri" content="https://loving-euclid-96db97.netlify.com/">
 	<meta name="salesforce-target" content="#sign-in-link">
     <meta name="salesforce-login-handler" content="onLogin">
     <meta name="salesforce-logout-handler" content="onLogout">
