--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,9 @@
 <head>
 
 	<title>Login Page1</title>
-	<!--<link href="reset.css" rel="stylesheet">-->
+	<link href="reset.css" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,600" type="text/css" rel="stylesheet">
-	<!--<link href="main.css" rel="stylesheet">-->
+	<link href="main.css" rel="stylesheet">
 	<meta name="salesforce-community" content="https://devdauk-eciam.cs85.force.com/SocketEnergy">
 	<meta name="salesforce-client-id" content="3MVG9X0_oZyBSzHrnzENhROatHG5Bytipp_D1AtE94cBX7Yy89MVKMQ9Y.mlFa0fgO5cksjE4Bxf.GRWhtHtt">
 
