--- a/Index.html
+++ b/Index.html
@@ -5,22 +5,22 @@
 <head>
 
 	<title>Login Page1</title>
-	<link href="reset.css" rel="stylesheet">
+	<!--<link href="reset.css" rel="stylesheet">-->
 	<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,600" type="text/css" rel="stylesheet">
-	<link href="main.css" rel="stylesheet">
+	<!--<link href="main.css" rel="stylesheet">-->
 	<meta name="salesforce-community" content="https://devdauk-eciam.cs85.force.com/SocketEnergy">
 	<meta name="salesforce-client-id" content="3MVG9X0_oZyBSzHrnzENhROatHG5Bytipp_D1AtE94cBX7Yy89MVKMQ9Y.mlFa0fgO5cksjE4Bxf.GRWhtHtt">
-
+	<meta name="salesforce-redirect-uri" content="https://loving-euclid-96db97.netlify.com/">
 	<meta name="salesforce-mode" content="modal">
-	<meta name="salesforce-mask-redirects" content="true">
-	<meta name="salesforce-allowed-domains" content="loving-euclid-96db97.netlify.com">    
-    <meta name="salesforce-save-access-token" content="true">
-    <meta name="salesforce-forgot-password-enabled" content="true">
-    <meta name="salesforce-self-register-enabled" content="true">
-    <meta name="salesforce-redirect-uri" content="https://loving-euclid-96db97.netlify.com/">
+	<meta name="salesforce-namespace" content="">
 	<meta name="salesforce-target" content="#sign-in-link">
+	 <meta name="salesforce-save-access-token" content="true">
+	<meta name="salesforce-forgot-password-enabled" content="true">
+    <meta name="salesforce-self-register-enabled" content="true">
     <meta name="salesforce-login-handler" content="onLogin">
     <meta name="salesforce-logout-handler" content="onLogout">
+    <meta name="salesforce-mask-redirects" content="true">
+
 	<link href="https://devdauk-eciam.cs85.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
 	<script src="https://devdauk-eciam.cs85.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
    	<script language="javascript">
