--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 	<script src="https://devdauk-eciam.cs85.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
 	
-	$("#yourLink").click(function(e){
+	$("#sfid-self-registration").click(function(e){
 		document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
 	})
 	
