--- a/Index.html
+++ b/Index.html
@@ -25,9 +25,14 @@
 	<script src="https://devdauk-eciam.cs85.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
 	
-	$("#sfid-self-registration").click(function(e){
-		document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
-	})
+	
+	$(document).ready(function(){
+	$("#sfid-self-registration").click(function(){
+	alert('test');
+	$(this).attr('href','https://www.google.com');
+		//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
+	});
+	});
 	
 	
 	
