--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
 	
 	$(document).ready(function(){
 	$("#sfid-self-registration").click(function(){
-	alert('test');
+	alert('test1');
 	$(this).attr('href','https://www.google.com');
 		//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
 	});
