--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 	<meta name="salesforce-community" content="https://devdauk-eciam.cs85.force.com/SocketEnergy">
 	<meta name="salesforce-client-id" content="3MVG9X0_oZyBSzHrnzENhROatHG5Bytipp_D1AtE94cBX7Yy89MVKMQ9Y.mlFa0fgO5cksjE4Bxf.GRWhtHtt">
 	<meta name="salesforce-redirect-uri" content="https://loving-euclid-96db97.netlify.com/">
-	<meta name="salesforce-mode" content="inline">
+	<meta name="salesforce-mode" content="modal">
 	<meta name="salesforce-namespace" content="">
 	<meta name="salesforce-target" content="#sign-in-link">
 	 <meta name="salesforce-save-access-token" content="true">
@@ -26,13 +26,13 @@
    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
 	
 	
-	$(document).ready(function(){
+	
 	$("#sfid-self-registration").click(function(){
-	alert('test11');
+	alert('test');
 	$(this).attr('href','https://www.google.com');
 		//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
 	});
-	});
+	
 	
 	
 	
