--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 	<meta name="salesforce-redirect-uri" content="https://loving-euclid-96db97.netlify.com/">
 	<meta name="salesforce-mode" content="inline">
 	<meta name="salesforce-namespace" content="">
-	<meta name="salesforce-target" content="#sign-in-link">
+	<meta name="salesforce-target" content="#sfid-selfreg-password">
 	 <meta name="salesforce-save-access-token" content="true">
 	<meta name="salesforce-forgot-password-enabled" content="true">
     <meta name="salesforce-self-register-enabled" content="true">
