--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,7 @@
 	<script>
 	
 	$("#sfid-self-registration").click(function(){
+	event.preventDefault();
 	alert('test');
 	$(this).attr('href','https://www.google.com');
 		//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
