--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 	
 	$("#sfid-self-registration").click(function(){
 	event.preventDefault();
-	alert('test');
+	alert("test");
 	$(this).attr('href','https://www.google.com');
 		//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
 	});
