--- a/Index.html
+++ b/Index.html
@@ -27,14 +27,14 @@
    	
 	
 	<script>
-	
-	$("#sfid-self-registration").click(function(){
-	event.preventDefault();
-	alert("test");
-	$(this).attr('href','https://www.google.com');
-		//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
+	$(document).ready(function(){
+		$("#sfid-self-registration").click(function(){
+		event.preventDefault();
+		alert('test');
+		$(this).attr('href','https://www.google.com');
+			//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
+		});
 	});
-	
 	
 	
 	
