--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
 	
 	<script>
 	$(document).ready(function(){
-		$("#sfid-self-registration").click(function(){
+		$("#sign-in-link").click(function(){
 		event.preventDefault();
 		alert('test');
 		$(this).attr('href','https://www.google.com');
