--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 	$(document).ready(function(){
 		$("#sign-in-link").click(function(){
 		//event.preventDefault();
-		alert('test');
+		//alert('test');
 		$("#sfid-self-registration").attr('href','https://www.google.com');
 			//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
 		});
