--- a/Index.html
+++ b/Index.html
@@ -31,9 +31,13 @@
 		$("#sign-in-link").click(function(){
 		//event.preventDefault();
 		//alert('test');
-		$("#sfid-self-registration").attr('href','https://www.google.com');
+		//$("#sfid-self-registration").attr('href','https://www.google.com');
 			//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
+			
+		$('#sfid_xdomain').attr('src', 'https://www.google.com');
 		});
+		
+		
 	});
 	
 	
