--- a/Index.html
+++ b/Index.html
@@ -21,8 +21,8 @@
     <meta name="salesforce-logout-handler" content="onLogout">
     <meta name="salesforce-mask-redirects" content="true">
 
-	<link href="https://testsocket.netlify.com/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
-	<script src="https://testsocket.netlify.com/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
+	<link href="https://devdauk-eciam.cs85.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
+	<script src="https://devdauk-eciam.cs85.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
    	
 	
