--- a/Index.html
+++ b/Index.html
@@ -83,7 +83,7 @@
 <table width="20%" bgcolor="0099CC" align="center">
 
 <tr>
-<td colspan=2><center><font size=4><b>EON Portal</b></font></center></td>
+<td colspan=2><center><font size=4><b>EON Portal1</b></font></center></td>
 </tr>
 
 
