--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
 	<script>
 	$(document).ready(function(){
 		$("#sign-in-link").click(function(){
-		//event.preventDefault();
+		event.preventDefault();
 		//alert('test');
 		//$("#sfid-self-registration").attr('href','https://www.google.com');
 			//document.getElementById('sfid-self-registration').setAttribute('href','https://www.google.com');
