--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
 	<!--<link href="reset.css" rel="stylesheet">-->
 	<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,600" type="text/css" rel="stylesheet">
 	<!--<link href="main.css" rel="stylesheet">-->
-	<meta name="salesforce-community" content="https://devdauk-eciam.cs85.force.com/SocketEnergy">
-	<meta name="salesforce-client-id" content="3MVG9X0_oZyBSzHrnzENhROatHG5Bytipp_D1AtE94cBX7Yy89MVKMQ9Y.mlFa0fgO5cksjE4Bxf.GRWhtHtt">
+	<meta name="salesforce-community" content="https://sitciam-eciam.cs106.force.com/SocketEnergy">
+	<meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
 	<meta name="salesforce-redirect-uri" content="https://loving-euclid-96db97.netlify.com/">
 	<meta name="salesforce-mode" content="modal">
 	<meta name="salesforce-namespace" content="">
@@ -21,8 +21,8 @@
     <meta name="salesforce-logout-handler" content="onLogout">
     <meta name="salesforce-mask-redirects" content="true">
 
-	<link href="https://devdauk-eciam.cs85.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
-	<script src="https://devdauk-eciam.cs85.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
+	<link href="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
+	<script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
    	
 	
