--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 	<meta name="salesforce-community" content="https://sitciam-eciam.cs106.force.com/SocketEnergy">
 	<meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
 	<meta name="salesforce-redirect-uri" content="https://loving-euclid-96db97.netlify.com/">
-	<meta name="salesforce-mode" content="modal">
+	<meta name="salesforce-mode" content="inline">
 	<meta name="salesforce-namespace" content="">
 	<meta name="salesforce-target" content="#sign-in-link">
 	 <meta name="salesforce-save-access-token" content="true">
