--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 	<!--<link href="main.css" rel="stylesheet">-->
 	<meta name="salesforce-community" content="https://sitciam-eciam.cs106.force.com/SocketEnergy">
 	<meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
-	<meta name="salesforce-redirect-uri" content="https://loving-euclid-96db97.netlify.com/">
+	<meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/">
 	<meta name="salesforce-mode" content="inline">
 	<meta name="salesforce-namespace" content="">
 	<meta name="salesforce-target" content="#sign-in-link">
@@ -20,7 +20,8 @@
     <meta name="salesforce-login-handler" content="onLogin">
     <meta name="salesforce-logout-handler" content="onLogout">
     <meta name="salesforce-mask-redirects" content="true">
-
+    <meta name="salesforce-server-callback" content="true">
+	
 	<link href="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
 	<script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
