--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
     <meta name="salesforce-logout-handler" content="onLogout">
     <meta name="salesforce-mask-redirects" content="true">
     <meta name="salesforce-server-callback" content="true">
+	<meta name="salesforce-allowed-domains" content="testsocket.netlify.com">
 	
 	<link href="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
 	<script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
