--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,6 @@ SOCKET
 </title>
 </head>
 <body>
-<p>This is a very simple HTML document</p>
+<p>SOCKET This is a very simple HTML document</p>
 <p>It only has two paragraphs</p>
 </body>
