--- a/welcome.html
+++ b/welcome.html
@@ -1,10 +1,18 @@
 <html>
 <head>
-<title>
-SOCKET
-</title>
-</head>
-<body>
-<p>SOCKET This is a very simple HTML document</p>
-<p>It only has two paragraphs</p>
-</body>
+    <meta name="salesforce-community" content="https://sitciam-eciam.cs106.force.com/SocketEnergy">
+    <meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
+    <meta name="salesforce-mode" content="inline-callback">
+    <meta name="salesforce-save-access-token" content="false">
+    <meta name="salesforce-allowed-domains" content="testsocket.netlify.com">
+    <meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/welcome.html">
+    <meta name="salesforce-target" content="#salesforce-login">
+    <meta name="salesforce-login-handler" content="onLogin">
+    <meta name="salesforce-logout-handler" content="onLogout">
+    
+  
+  <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
+
+</head> 
+<body></body>        
+</html>
