--- a/welcome.html
+++ b/welcome.html
@@ -14,5 +14,21 @@
   <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
 
 </head> 
-<body></body>        
+    <body>
+      <div id="sign-in-link" style  = "position: absolute; top:20px; right:20px;"></div>
+<form name="loginForm" method="post" action="login.php">
+<table width="20%" bgcolor="0099CC" align="center">
+
+<tr>
+<td colspan=2><center><font size=4><b>Welcome Socket</b></font></center></td>
+</tr>
+
+
+
+
+
+
+</table>
+</form>
+</body>        
 </html>
