--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,8 @@
 	<!--<link href="main.css" rel="stylesheet">-->
 	<meta name="salesforce-community" content="https://sitciam-eciam.cs106.force.com/SocketEnergy">
 	<meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
-	<meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/welcome.html">
-	<meta name="salesforce-mode" content="inline">
+	<meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/_callback.html">
+	<meta name="salesforce-mode" content="modal">
 	<meta name="salesforce-namespace" content="">
 	<meta name="salesforce-target" content="#sign-in-link">
 	 <meta name="salesforce-save-access-token" content="true">
