--- a/Index.html
+++ b/Index.html
@@ -12,16 +12,9 @@
 	<meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
 	<meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/_callback.html">
 	<meta name="salesforce-mode" content="modal">
-	<meta name="salesforce-namespace" content="">
 	<meta name="salesforce-target" content="#sign-in-link">
-	 <meta name="salesforce-save-access-token" content="true">
-	<meta name="salesforce-forgot-password-enabled" content="true">
-    <meta name="salesforce-self-register-enabled" content="true">
     <meta name="salesforce-login-handler" content="onLogin">
     <meta name="salesforce-logout-handler" content="onLogout">
-    <meta name="salesforce-mask-redirects" content="true">
-    <meta name="salesforce-server-callback" content="true">
-	<meta name="salesforce-allowed-domains" content="testsocket.netlify.com">
 	
 	<link href="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
 	<script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
@@ -47,6 +40,8 @@
 	
  function onLogin(identity) {
 		
+	 
+	 alert(JSON.Stringify(identity));
 		 var targetDiv = document.querySelector(SFIDWidget.config.target);	
 		
 		var avatar = document.createElement('a'); 
