--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
  function onLogin(identity) {
 		
 	 
-	 alert(JSON.Stringify(identity));
+	 alert(JSON.stringify(identity));
 		 var targetDiv = document.querySelector(SFIDWidget.config.target);	
 		
 		var avatar = document.createElement('a'); 
