--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
    	
 	
 	<script>
-	$(document).ready(function(){
+	/*$(document).ready(function(){
 		$("#sign-in-link").click(function(){
 		//event.preventDefault();
 		//alert('test');
@@ -33,7 +33,7 @@
 		});
 		
 		
-	});
+	});*/
 	
 	
 	
