--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
  function onLogin(identity) {
 		
 	 
-	 //alert(JSON.stringify(identity));
+	 alert(JSON.stringify(identity));
 	 console.log("vikas");
  }
 	function onLogout() {
