--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,7 @@
 	<meta name="salesforce-target" content="#sign-in-link">
     <meta name="salesforce-login-handler" content="onLogin">
     <meta name="salesforce-logout-handler" content="onLogout">
+	 <meta name="salesforce-save-access-token" content="true">
 	
 	<link href="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
 	<script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
