--- a/Index.html
+++ b/Index.html
@@ -46,6 +46,9 @@
 		
 	 
 	 alert(JSON.stringify(identity));
+	 alert(identity.username);
+	 alert(identity.Customer_ID__c);
+
 	 console.log("vikas");
  }
 	function onLogout() {
