--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,7 @@
 	 
 	 alert(JSON.stringify(identity));
 	 alert(identity.username);
-	 alert(identity.Customer_ID__c);
+	 //alert(identity.Customer_ID__c);
 
 	 console.log("vikas");
  }
