--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 	<!--<link href="main.css" rel="stylesheet">-->
 	<meta name="salesforce-community" content="https://sitciam-eciam.cs106.force.com/SocketEnergy">
 	<meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
-	<meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/_callback.html">
+	<meta name="salesforce-redirect-uri" content="https://dev2-eciam.cs106.force.com/s/services/apexrest/communityCallback1/callBack ">
 	<meta name="salesforce-mode" content="modal">
 	<meta name="salesforce-target" content="#sign-in-link">
     <meta name="salesforce-login-handler" content="onLogin">
