--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 	<meta name="salesforce-forgot-password-enabled" content="true">
 	<meta name="salesforce-self-register-enabled" content="true">
 	<meta name="salesforce-server-starturl" content="https://sitciam-eciam.cs106.force.com/services/oauth2/authorize?response_type=token&client_id=3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z&redirect_uri=https%3A%2F%2Ftestsocket.netlify.com%2F_callback.html&state=%2F">
-	
+	<meta name="salesforce-allowed-domains" content="dev2-eciam.cs106.force.com"> 
 	<link href="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
 	<script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
