--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 	<!--<link href="main.css" rel="stylesheet">-->
 	<meta name="salesforce-community" content="https://sitciam-eciam.cs106.force.com/SocketEnergy">
 	<meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
-	<meta name="salesforce-redirect-uri" content="https://sitciam-eciam.cs106.force.com/SocketEnergy/services/apexrest/communityCallback1/callBack">
+	<meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/_callback.html">
 	<meta name="salesforce-mode" content="modal">
 	<meta name="salesforce-target" content="#sign-in-link">
     <meta name="salesforce-login-handler" content="onLogin">
@@ -18,7 +18,6 @@
 	 <meta name="salesforce-save-access-token" content="true">
 	<meta name="salesforce-forgot-password-enabled" content="true">
 	<meta name="salesforce-self-register-enabled" content="true">
-	<meta name="salesforce-allowed-domains" content="sitciam-eciam.cs106.force.com"> 
 	<meta name="salesforce-server-starturl" content="https://sitciam-eciam.cs106.force.com/services/oauth2/authorize?response_type=token&client_id=3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z&redirect_uri=https%3A%2F%2Ftestsocket.netlify.com%2F_callback.html&state=%2F">
 	
 	<link href="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
