--- a/Index.html
+++ b/Index.html
@@ -46,6 +46,7 @@
 		
 	 
 	 alert(JSON.stringify(identity));
+	  alert("RAW:::::"+identity);
 	 alert(identity.username);
 	 //alert(identity.Customer_ID__c);
 
