--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
 	
 	
  function onLogin(identity) {
-	window.location.href= 'hhttps://testsocket.netlify.com/_callback.html?session-id=' + identity.access_token;
+	window.location.href= 'https://testsocket.netlify.com/_callback.html?session-id=' + identity.access_token;
  }
 </script>
 </head>
