--- a/Index.html
+++ b/Index.html
@@ -42,8 +42,10 @@
 	
 	
 	
- function onLogin(identity) {
+ function onLogin(identity, param2, param3) {
 	console.log(identity.access_token);
+	 console.log(param2);
+	 console.log(param3);
  }
 </script>
 </head>
