--- a/_callback.html
+++ b/_callback.html
@@ -2,16 +2,10 @@
 <head>
     <meta name="salesforce-community" content="https://sitciam-eciam.cs106.force.com/SocketEnergy">
     <meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
-    <meta name="salesforce-mode" content="modal-callback">
+    <meta name="salesforce-mode" content="inline-callback">
     <meta name="salesforce-save-access-token" content="true">
     <meta name="salesforce-allowed-domains" content="testsocket.netlify.com">
-    
-    
-  
-  <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
-
+    <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
 </head> 
-    <body>
-        <h1>Callback page</h1>
-</body>        
+<body></body>        
 </html>
