--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
 	 function onLogin(identity) {
-		 const widget = SFIDWidget.init();
+		 const widget = SFIDWidget;
 		 console.log(widget);
 		 const storageKey = identity.organization_id;
 
