--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,8 @@
 	 function onLogin(identity) {
 		 const widget = SFIDWidget;
 		 console.log(widget);
+		 const token = widget.getToken();
+		 console.log(token);
 		 const storageKey = identity.organization_id;
 
 		 const jwt = window.localStorage.getItem(storageKey);
