--- a/_callback.html
+++ b/_callback.html
@@ -5,6 +5,10 @@
     <meta name="salesforce-mode" content="inline-callback">
     <meta name="salesforce-save-access-token" content="true">
     <meta name="salesforce-allowed-domains" content="testsocket.netlify.com">
+    <script>
+        window.localStorage.setItem('TEST', 'TEST');
+        console.log('HERE');
+    </script>
     <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
 </head> 
 <body></body>        
