--- a/_callback.html
+++ b/_callback.html
@@ -9,7 +9,7 @@
         window.localStorage.setItem('TEST', 'TEST');
         console.log('HERE');
     </script>
-    <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
+   <!-- <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script> -->
 </head> 
 <body></body>        
 </html>
