--- a/_callback.html
+++ b/_callback.html
@@ -14,6 +14,7 @@
     <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
     <script>
         function onLogin(response) {
+            alert('logged in!');
             console.log(response);
         }
     </script>
