--- a/_callback.html
+++ b/_callback.html
@@ -13,6 +13,7 @@
     <!--  <meta name="salesforce-save-access-token" content="true"> -->
     
     <script>
+        debugger;
         function onLogin(response) {
             alert('logged in!');
             console.log(response);
