--- a/_callback.html
+++ b/_callback.html
@@ -5,7 +5,7 @@
     <meta name="salesforce-mode" content="inline-callback">
     <meta name="salesforce-allowed-domains" content="testsocket.netlify.com">
      <!-- Required META tags -->
-    
+    <meta name="salesforce-save-access-token" content="true">
     <script>
         var hash = window.location.hash.substr(1);
 
