--- a/_callback.html
+++ b/_callback.html
@@ -6,7 +6,8 @@
     <meta name="salesforce-allowed-domains" content="testsocket.netlify.com">
      <!-- Required META tags -->
     <meta name="salesforce-save-access-token" content="true">
-    
+    <meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/_callback.html">
+
     <script src="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
     
 </head> 
