--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
 	<meta name="salesforce-client-id" content="3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z">
 	<meta name="salesforce-redirect-uri" content="https://testsocket.netlify.com/_callback.html">
 	<meta name="salesforce-mode" content="inline">
+	<meta name="salesforce-mask-redirects" content="true">
 	<meta name="salesforce-target" content="#sign-in-link">
         <meta name="salesforce-login-handler" content="onLogin">
         <meta name="salesforce-logout-handler" content="onLogout">
