--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,7 @@
 	 function onLogin(identity) {
 		 console.log('Logged in...');
 		 console.log('IDENTITIY:', identity);
+		 alert('IDENTITIY:', identity);
 	 }
 	</script>
 </head>
