--- a/Index.html
+++ b/Index.html
@@ -11,11 +11,11 @@
         <meta name="salesforce-login-handler" content="onLogin">
         <meta name="salesforce-logout-handler" content="onLogout">
 	<meta name="salesforce-server-callback" content="true">
-	<!-- <meta name="salesforce-save-access-token" content="true"> -->
+	 <meta name="salesforce-save-access-token" content="true">
 	<meta name="salesforce-server-response" content="base64EncodedJSON">
 	<meta name="salesforce-forgot-password-enabled" content="true">
 	<meta name="salesforce-self-register-enabled" content="true">
-	<meta name="salesforce-server-starturl" content="https://sitciam-eciam.cs106.force.com/SocketEnergy/services/oauth2/authorize?response_type=token& client_id=3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z&redirect_uri=https%3A%2F%2Ftestsocket.netlify.com%2F_callback.html&state=%2F">
+	<!--<meta name="salesforce-server-starturl" content="https://sitciam-eciam.cs106.force.com/SocketEnergy/services/oauth2/authorize?response_type=token& client_id=3MVG9qQjGkWUbcrGuliW88sLR8gbSHLUZ38k5BcfKDJBZ5g.ZeYngM6bHwQEFd98rSPzjIjTNA.k47GrpMg1Z&redirect_uri=https%3A%2F%2Ftestsocket.netlify.com%2F_callback.html&state=%2F">-->
 	
 	<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,600" type="text/css" rel="stylesheet">
 	<link href="https://sitciam-eciam.cs106.force.com/SocketEnergy/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
