--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 	<meta name="salesforce-target" content="#sign-in-link">
         <meta name="salesforce-login-handler" content="onLogin">
         <meta name="salesforce-logout-handler" content="onLogout">
-	<meta name="salesforce-server-callback" content="true">
+	<!--<meta name="salesforce-server-callback" content="true">-->
 	 <meta name="salesforce-save-access-token" content="true">
 	<meta name="salesforce-server-response" content="base64EncodedJSON">
 	<meta name="salesforce-forgot-password-enabled" content="true">
